package com.example.vynils.ui.components

import androidx.compose.foundation.BorderStroke
import androidx.compose.foundation.clickable
import androidx.compose.foundation.layout.Arrangement
import androidx.compose.foundation.layout.Row
import androidx.compose.runtime.Composable
import androidx.compose.material3.TextButton
import androidx.compose.material3.Text
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.PaddingValues
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.heightIn
import androidx.compose.foundation.layout.padding
import androidx.compose.foundation.layout.size
import androidx.compose.ui.Modifier
import androidx.compose.ui.layout.ContentScale
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.unit.dp
import androidx.compose.ui.Alignment
import androidx.compose.ui.draw.clip
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.ui.graphics.Color
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.platform.testTag
import coil.compose.AsyncImage
import com.example.vynils.R
import com.example.vynils.model.Artist

@Composable
fun ArtistListElement(artist: Artist, onClick: () -> Unit) {
    Row(
        modifier = Modifier
            .fillMaxWidth()
            .clickable(onClick = onClick)
            .heightIn(min = 104.dp)
            .testTag("artist-item")
            .padding(horizontal = 20.dp, vertical = 10.dp),
        verticalAlignment = Alignment.CenterVertically
    ) {
        val imageUrl = artist.image.let {
            if (it.startsWith("http://")) it.replace("http://", "https://") else it
        }.ifEmpty { null }

        AsyncImage(
            model = imageUrl,
            contentDescription = artist.name,
            modifier = Modifier
                .size(width = 78.dp, height = 78.dp)
                .testTag("artist-photo")
                .clip(RoundedCornerShape(8.dp)),
            contentScale = ContentScale.Crop,
            placeholder = painterResource(id = R.drawable.no_image),
            error = painterResource(id = R.drawable.no_image)
        )
        Column(
            modifier = Modifier
                .weight(1f)
                .padding(start = 12.dp, end = 12.dp),
            verticalArrangement = Arrangement.Center
        ) {
            Text(
                artist.name ?: "",
                fontWeight = FontWeight.Bold,
                modifier = Modifier.testTag("artist-name")
            )
            TextButton(
                onClick = onClick,
                modifier = Modifier
                    .padding(top = 4.dp)
                    .testTag("artist-detail-button")
            ) {
                Text(text = "Ver detalle")
            }
        }
    }
}
