...
                )

                Text(
                    text = performer?.name ?: stringResource(id = R.string.loading),
                    modifier = Modifier
                        .padding(horizontal = 20.dp, vertical = 16.dp)
                        .testTag("artist-detail-name"),
                    fontSize = 22.sp,
                    fontWeight = FontWeight.Bold
                )

                ArtistDetailSectionHeader(
                    title = stringResource(id = R.string.label_biography)
...
