...
            error = painterResource(id = R.drawable.no_image)
        )
        Text(
            text = state.collector?.name ?: stringResource(id = R.string.loading),
            modifier = Modifier
                .padding(horizontal = 20.dp, vertical = 16.dp)
                .testTag("collector-detail-name"),
            fontSize = 22.sp,
            fontWeight = FontWeight.Bold
        )
        Text(
            text = stringResource(id = R.string.label_phone, state.collector?.telephone ?: ""),
            modifier = Modifier.padding(horizontal = 20.dp, vertical = 2.dp),
...
